feat: Set up initial full-stack application with core frontend and backend infrastructure, including authentication, routing, and email services.

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -16,6 +16,7 @@
         "declaration": true,
         "declarationMap": true,
         "sourceMap": true,
+        "ignoreDeprecations": "5.0",
         "baseUrl": "./src",
         "paths": {
             "@/*": [
