--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,12 @@
         "lint": "eslint src --ext .ts"
     },
     "dependencies": {
+        "@types/express-rate-limit": "^5.1.3",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^5.0.1",
+        "express-rate-limit": "^8.2.1",
         "helmet": "^8.0.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.9.4",
